# silicon-child

./: .agentignore  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NOTES.md  README.md  TASK-017-notes.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai_infant/: __init__.py  __main__.py
ai_infant/agents/: llm_orchestrator.py
ai_infant/core/: __init__.py  adaptive_loop.py  loop.py  reasoning.py
ai_infant/crawl/: __init__.py  browser.py  browser_tool.py  llm_adapter.py  vision_browser.py
ai_infant/examples/: eval_demo.py  min_run.py
ai_infant/judge/: interface.py
ai_infant/learn/: __init__.py  continuous.py  eval.py  llm_aggregator.py  sft.py
ai_infant/llm/: client.py  openai_client.py
ai_infant/plan/: __init__.py  policy.py
ai_infant/text/: __init__.py  ai_response.py  image_analysis.py  parse.py
docs/: ADR-0000.md  LLM_JURY_GUIDE.md
schemas/: doc.v1.json  job.v1.json  trace.v1.json
scripts/: __init__.py  promote.py  report.py  retention.py  run_integration_tests.sh  select.py
tests/: test_adaptive_research.py  test_browser_action_logging.py  test_browser_confidence.py  test_browser_integration.py  test_browser_navigation.py  test_browser_parser_store.py  test_eval_promote.py  test_integration_llm_retry.py  test_judge_manager.py  test_llm_adapter.py  test_llm_client.py  test_llm_judge_personas.py  test_loop.py  test_orchestrator_retry.py  test_orchestrator_suggested_fix.py  test_orchestrator_with_judge.py  test_package.py  test_report_retention.py  test_schema_validation.py  test_sft_resume.py
tests/fixtures/: doc_v1_example.json  job_v1_example.json  trace_v1_example.json
